PixelFantasy Fix When clicked on the showbox will cause the double scroller to appear.

--- a/PixelFantasy/css/index.css
+++ b/PixelFantasy/css/index.css
@@ -82,17 +82,6 @@ body {
     padding-top: 0px;
   }
 }
-/* Hide scrollbar for IE, Edge and Firefox */
-.containerScrollHidden {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
-
-/* Hide scrollbar for Chrome, Safari and Opera */
-.containerScrollHidden::-webkit-scrollbar {
-  display: none;
-}
-
 .nav {
   float: left;
   width: 25%;
@@ -453,6 +442,10 @@ body {
 
 .d-none {
   display: none !important;
+}
+
+.overflow-hidden {
+  overflow: hidden !important;
 }
 
 .content {
